updates secrets yml with api keys

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,3 +25,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  twitter_api_key: aroPJaaUPyefpiKF7hG07PBgc
+  twitter_api_secret: FMUghYdYzLjg8uyJfpJHBYpD4ixPyxlQCujLT7615DKQgKuRoq
+  # Bearer token used for app authorized requests (using the app limit instead of user limit)
+  bearer_token: AAAAAAAAAAAAAAAAAAAAAHUOiwAAAAAABOF4XPi80ShkOV4ZtMVVjao4xEQ%3DwATnFhNqvmvhvV3GkSwA127i2j4i6O9mW3szPvbvjEe1DSBwMe
